--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="query.css">
     <script src="https://kit.fontawesome.com/40cd4f1558.js" crossorigin="anonymous"></script>
-    <title>Test Licencia de Conducir</title>
+    <title>Test Licencia de Conducir - Córdoba Capital</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon-cba.png">
 
 </head>
